refactor: Serve images size to save cellular data and improve load time

--- a/index.html
+++ b/index.html
@@ -1,63 +1,211 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Jogo da Memoria</title>
-	<link rel="stylesheet" type="text/css" href="./style.css">
-	<script type="text/javascript" src="./script.js" charset="utf-8" defer></script>
-</head>
-<body>
-	<main class="memory-game">
-		<div class="card" data-card="bowser">
-			<img src="./img/bowser.jpg" alt="face da carta" class="card-front">
-			<img src="./img/box.png" alt="verso da carta" class="card-back">
-		</div>
-		<div class="card" data-card="luigi">
-			<img src="./img/luigi.png" alt="face da carta" class="card-front">
-			<img src="./img/box.png" alt="verso da carta" class="card-back">
-		</div>
-		<div class="card" data-card="mario">
-			<img src="./img/mario.png" alt="face da carta" class="card-front">
-			<img src="./img/box.png" alt="verso da carta" class="card-back">
-		</div>
-		<div class="card" data-card="peach">
-			<img src="./img/peach.png" alt="face da carta" class="card-front">
-			<img src="./img/box.png" alt="verso da carta" class="card-back">
-		</div>
-		<div class="card" data-card="toad">
-			<img src="./img/toad.png" alt="face da carta" class="card-front">
-			<img src="./img/box.png" alt="verso da carta" class="card-back">
-		</div>
-		<div class="card" data-card="yoshi">
-			<img src="./img/yoshi.png" alt="face da carta" class="card-front">
-			<img src="./img/box.png" alt="verso da carta" class="card-back">
-		</div>
-		<div class="card" data-card="bowser">
-			<img src="./img/bowser.jpg" alt="face da carta" class="card-front">
-			<img src="./img/box.png" alt="verso da carta" class="card-back">
-		</div>
-		<div class="card" data-card="luigi">
-			<img src="./img/luigi.png" alt="face da carta" class="card-front">
-			<img src="./img/box.png" alt="verso da carta" class="card-back">
-		</div>
-		<div class="card" data-card="mario">
-			<img src="./img/mario.png" alt="face da carta" class="card-front">
-			<img src="./img/box.png" alt="verso da carta" class="card-back">
-		</div>
-		<div class="card" data-card="peach">
-			<img src="./img/peach.png" alt="face da carta" class="card-front">
-			<img src="./img/box.png" alt="verso da carta" class="card-back">
-		</div>
-		<div class="card" data-card="toad">
-			<img src="./img/toad.png" alt="face da carta" class="card-front">
-			<img src="./img/box.png" alt="verso da carta" class="card-back">
-		</div>
-		<div class="card" data-card="yoshi">
-			<img src="./img/yoshi.png" alt="face da carta" class="card-front">
-			<img src="./img/box.png" alt="verso da carta" class="card-back">
-		</div>		
-	</main>
-
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jogo da Memoria</title>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script
+      type="text/javascript"
+      src="./script.js"
+      charset="utf-8"
+      defer
+    ></script>
+  </head>
+  <body>
+    <main class="memory-game">
+      <div class="card" data-card="bowser">
+        <img
+          width="150"
+          height="200"
+          src="./img/bowser.jpg"
+          alt="face da carta"
+          class="card-front"
+        />
+        <img
+          width="150"
+          height="200"
+          src="./img/box.png"
+          alt="verso da carta"
+          class="card-back"
+        />
+      </div>
+      <div class="card" data-card="luigi">
+        <img
+          width="150"
+          height="200"
+          src="./img/luigi.png"
+          alt="face da carta"
+          class="card-front"
+        />
+        <img
+          width="150"
+          height="200"
+          src="./img/box.png"
+          alt="verso da carta"
+          class="card-back"
+        />
+      </div>
+      <div class="card" data-card="mario">
+        <img
+          width="150"
+          height="200"
+          src="./img/mario.png"
+          alt="face da carta"
+          class="card-front"
+        />
+        <img
+          width="150"
+          height="200"
+          src="./img/box.png"
+          alt="verso da carta"
+          class="card-back"
+        />
+      </div>
+      <div class="card" data-card="peach">
+        <img
+          width="150"
+          height="200"
+          src="./img/peach.png"
+          alt="face da carta"
+          class="card-front"
+        />
+        <img
+          width="150"
+          height="200"
+          src="./img/box.png"
+          alt="verso da carta"
+          class="card-back"
+        />
+      </div>
+      <div class="card" data-card="toad">
+        <img
+          width="150"
+          height="200"
+          src="./img/toad.png"
+          alt="face da carta"
+          class="card-front"
+        />
+        <img
+          width="150"
+          height="200"
+          src="./img/box.png"
+          alt="verso da carta"
+          class="card-back"
+        />
+      </div>
+      <div class="card" data-card="yoshi">
+        <img
+          width="150"
+          height="200"
+          src="./img/yoshi.png"
+          alt="face da carta"
+          class="card-front"
+        />
+        <img
+          width="150"
+          height="200"
+          src="./img/box.png"
+          alt="verso da carta"
+          class="card-back"
+        />
+      </div>
+      <div class="card" data-card="bowser">
+        <img
+          width="150"
+          height="200"
+          src="./img/bowser.jpg"
+          alt="face da carta"
+          class="card-front"
+        />
+        <img
+          width="150"
+          height="200"
+          src="./img/box.png"
+          alt="verso da carta"
+          class="card-back"
+        />
+      </div>
+      <div class="card" data-card="luigi">
+        <img
+          width="150"
+          height="200"
+          src="./img/luigi.png"
+          alt="face da carta"
+          class="card-front"
+        />
+        <img
+          width="150"
+          height="200"
+          src="./img/box.png"
+          alt="verso da carta"
+          class="card-back"
+        />
+      </div>
+      <div class="card" data-card="mario">
+        <img
+          width="150"
+          height="200"
+          src="./img/mario.png"
+          alt="face da carta"
+          class="card-front"
+        />
+        <img
+          width="150"
+          height="200"
+          src="./img/box.png"
+          alt="verso da carta"
+          class="card-back"
+        />
+      </div>
+      <div class="card" data-card="peach">
+        <img
+          width="150"
+          height="200"
+          src="./img/peach.png"
+          alt="face da carta"
+          class="card-front"
+        />
+        <img
+          width="150"
+          height="200"
+          src="./img/box.png"
+          alt="verso da carta"
+          class="card-back"
+        />
+      </div>
+      <div class="card" data-card="toad">
+        <img
+          width="150"
+          height="200"
+          src="./img/toad.png"
+          alt="face da carta"
+          class="card-front"
+        />
+        <img
+          width="150"
+          height="200"
+          src="./img/box.png"
+          alt="verso da carta"
+          class="card-back"
+        />
+      </div>
+      <div class="card" data-card="yoshi">
+        <img
+          width="150"
+          height="200"
+          src="./img/yoshi.png"
+          alt="face da carta"
+          class="card-front"
+        />
+        <img
+          width="150"
+          height="200"
+          src="./img/box.png"
+          alt="verso da carta"
+          class="card-back"
+        />
+      </div>
+    </main>
+  </body>
 </html>
