refactor: Serve images in next-gen formats

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img
           width="150"
           height="200"
-          src="./img/box.png"
+          src="./img/box.webp"
           alt="verso da carta"
           class="card-back"
         />
@@ -34,14 +34,14 @@
         <img
           width="150"
           height="200"
-          src="./img/luigi.png"
+          src="./img/luigi.webp"
           alt="face da carta"
           class="card-front"
         />
         <img
           width="150"
           height="200"
-          src="./img/box.png"
+          src="./img/box.webp"
           alt="verso da carta"
           class="card-back"
         />
@@ -50,14 +50,14 @@
         <img
           width="150"
           height="200"
-          src="./img/mario.png"
+          src="./img/mario.webp"
           alt="face da carta"
           class="card-front"
         />
         <img
           width="150"
           height="200"
-          src="./img/box.png"
+          src="./img/box.webp"
           alt="verso da carta"
           class="card-back"
         />
@@ -66,14 +66,14 @@
         <img
           width="150"
           height="200"
-          src="./img/peach.png"
+          src="./img/peach.webp"
           alt="face da carta"
           class="card-front"
         />
         <img
           width="150"
           height="200"
-          src="./img/box.png"
+          src="./img/box.webp"
           alt="verso da carta"
           class="card-back"
         />
@@ -82,14 +82,14 @@
         <img
           width="150"
           height="200"
-          src="./img/toad.png"
+          src="./img/toad.webp"
           alt="face da carta"
           class="card-front"
         />
         <img
           width="150"
           height="200"
-          src="./img/box.png"
+          src="./img/box.webp"
           alt="verso da carta"
           class="card-back"
         />
@@ -98,14 +98,14 @@
         <img
           width="150"
           height="200"
-          src="./img/yoshi.png"
+          src="./img/yoshi.webp"
           alt="face da carta"
           class="card-front"
         />
         <img
           width="150"
           height="200"
-          src="./img/box.png"
+          src="./img/box.webp"
           alt="verso da carta"
           class="card-back"
         />
@@ -114,14 +114,14 @@
         <img
           width="150"
           height="200"
-          src="./img/bowser.jpg"
+          src="./img/bowser.webp"
           alt="face da carta"
           class="card-front"
         />
         <img
           width="150"
           height="200"
-          src="./img/box.png"
+          src="./img/box.webp"
           alt="verso da carta"
           class="card-back"
         />
@@ -130,14 +130,14 @@
         <img
           width="150"
           height="200"
-          src="./img/luigi.png"
+          src="./img/luigi.webp"
           alt="face da carta"
           class="card-front"
         />
         <img
           width="150"
           height="200"
-          src="./img/box.png"
+          src="./img/box.webp"
           alt="verso da carta"
           class="card-back"
         />
@@ -146,14 +146,14 @@
         <img
           width="150"
           height="200"
-          src="./img/mario.png"
+          src="./img/mario.webp"
           alt="face da carta"
           class="card-front"
         />
         <img
           width="150"
           height="200"
-          src="./img/box.png"
+          src="./img/box.webp"
           alt="verso da carta"
           class="card-back"
         />
@@ -162,14 +162,14 @@
         <img
           width="150"
           height="200"
-          src="./img/peach.png"
+          src="./img/peach.webp"
           alt="face da carta"
           class="card-front"
         />
         <img
           width="150"
           height="200"
-          src="./img/box.png"
+          src="./img/box.webp"
           alt="verso da carta"
           class="card-back"
         />
@@ -178,14 +178,14 @@
         <img
           width="150"
           height="200"
-          src="./img/toad.png"
+          src="./img/toad.webp"
           alt="face da carta"
           class="card-front"
         />
         <img
           width="150"
           height="200"
-          src="./img/box.png"
+          src="./img/box.webp"
           alt="verso da carta"
           class="card-back"
         />
@@ -194,14 +194,14 @@
         <img
           width="150"
           height="200"
-          src="./img/yoshi.png"
+          src="./img/yoshi.webp"
           alt="face da carta"
           class="card-front"
         />
         <img
           width="150"
           height="200"
-          src="./img/box.png"
+          src="./img/box.webp"
           alt="verso da carta"
           class="card-back"
         />
