refactor: Improve the quality of the names and formating

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jogo da Memoria</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script
       type="text/javascript"
@@ -11,6 +10,7 @@
       charset="utf-8"
       defer
     ></script>
+    <title>Jogo da Memória</title>
   </head>
   <body>
     <main class="memory-game">
@@ -18,8 +18,8 @@
         <img
           width="150"
           height="200"
-          src="./img/bowser.jpg"
-          alt="face da carta"
+          src="./img/bowser.webp"
+          alt="bowser"
           class="card-front"
         />
         <img
@@ -35,7 +35,7 @@
           width="150"
           height="200"
           src="./img/luigi.webp"
-          alt="face da carta"
+          alt="luigi"
           class="card-front"
         />
         <img
@@ -51,7 +51,7 @@
           width="150"
           height="200"
           src="./img/mario.webp"
-          alt="face da carta"
+          alt="mario"
           class="card-front"
         />
         <img
@@ -67,7 +67,7 @@
           width="150"
           height="200"
           src="./img/peach.webp"
-          alt="face da carta"
+          alt="peach"
           class="card-front"
         />
         <img
@@ -83,7 +83,7 @@
           width="150"
           height="200"
           src="./img/toad.webp"
-          alt="face da carta"
+          alt="toad"
           class="card-front"
         />
         <img
@@ -99,7 +99,7 @@
           width="150"
           height="200"
           src="./img/yoshi.webp"
-          alt="face da carta"
+          alt="yoshi"
           class="card-front"
         />
         <img
@@ -115,7 +115,7 @@
           width="150"
           height="200"
           src="./img/bowser.webp"
-          alt="face da carta"
+          alt="bowser"
           class="card-front"
         />
         <img
@@ -131,7 +131,7 @@
           width="150"
           height="200"
           src="./img/luigi.webp"
-          alt="face da carta"
+          alt="luigi"
           class="card-front"
         />
         <img
@@ -147,7 +147,7 @@
           width="150"
           height="200"
           src="./img/mario.webp"
-          alt="face da carta"
+          alt="mario"
           class="card-front"
         />
         <img
@@ -163,7 +163,7 @@
           width="150"
           height="200"
           src="./img/peach.webp"
-          alt="face da carta"
+          alt="peach"
           class="card-front"
         />
         <img
@@ -179,7 +179,7 @@
           width="150"
           height="200"
           src="./img/toad.webp"
-          alt="face da carta"
+          alt="toad"
           class="card-front"
         />
         <img
@@ -195,7 +195,7 @@
           width="150"
           height="200"
           src="./img/yoshi.webp"
-          alt="face da carta"
+          alt="yoshi"
           class="card-front"
         />
         <img
